--- a/lmsfrontend/package.json
+++ b/lmsfrontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.7",
     "daisyui": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
